# third-year-annual-project

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  Utils.py  docker-compose.yml  settings.json  startTrainning.py  testClassificationMLP.py  testClassificationRosenblatt.py  testRegressionRBF.py  test_dataset.py
Dataset/Italie/: 131. Ba  150. png  184._  228. ME
Datasets/Italie/: 245. $_  279. 15
Implementation/: 2019_3A_IBD_TestCases.ipynb  Implementation.py  RBF.ipynb  Test_MLP_classification.ipynb  Test_MLP_regression.ipynb  Test_RBF.ipynb  Test_Rosenblatt.ipynb  Utils.py  haste.py  startTrainning.py
Implementation/.ipynb_checkpoints/: RBF-checkpoint.ipynb  RBF_classif-checkpoint.ipynb  Test_MLP_classification-checkpoint.ipynb  Test_RBF-checkpoint.ipynb
Implementation/Librairie/: Matrix.cpp  Matrix.h  global.py
Implementation/Linear/: Linear.cpp  Linear.py
Implementation/MLP/: CLibrary.py  MultiLayerPerceptron.cpp  MultiLayerPerceptron.ipynb  MultiLayerPerceptron.py  MultiLayerPerceptron2.cpp  MultiLayerPerceptron_classif.ipynb  MultiLayerPerceptron_regre.ipynb  mlp.cpp
Models/: MLP_classification_E1000_A0001_N3072_64_64_1__32x32.model  MLP_classification_E100_A0001_N3072_64_64_1__32x32.model  MLP_regression_1000_001.model  ROSENBLATT_classification_1000_001.model
Tools/: commands.txt  generateDLLLinux.sh  generateDLLMac.sh  generateDLLWindows.bat  index.html  resizeAndConvert.py  shared-library.sh  trainDataset.py  utils.txt
implementation/: rosenblatt.py  shared-library.sh  source.cpp
interface/: docker-compose.yml
(+64 files in other folders)
