cmake_minimum_required(VERSION 3.13)
project(ProjetAnnuel)

set(CMAKE_CXX_STANDARD 17)

add_executable(ProjetAnnuel Implementation/RBF/RBF.cpp)
#add_executable(ProjetAnnuel Implementation/MLP/MultiLayerPerceptron.cpp)
#add_executable(ProjetAnnuel Implementation/Librairie/Matrix.h Implementation/Rosenblatt/Rosenblatt.cpp)
